--- a/CameraWorks/app/build.gradle
+++ b/CameraWorks/app/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
+    compileSdkVersion 20
+
+}
+android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.andre.snapcalendar"
+        applicationId "com.example.andre.cameraworks"
         minSdkVersion 24
         targetSdkVersion 26
         versionCode 1
@@ -25,4 +29,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.google.cloud:google-cloud-vision:1.14.0'
 }
