--- a/CameraWorks/app/build.gradle
+++ b/CameraWorks/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    compile group: 'org.json', name: 'json', version: '20180130'
 
     compile 'com.google.cloud:google-cloud-vision:1.14.0'
     //annotationProcessor 'com.google.cloud:google-cloud-vision:1.14.0'
